--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,8 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
+  stage: ${opt:stage, 'dev'}
+  region: eu-central-1
   memorySize: 128
   apiGateway:
     shouldStartNameWithService: true
